Commitment_to_Change_App/static/css/styles.css
@charset "utf-8";

/* 
-------------------------------------------------------------------
    --- Variables --- 
------------------------------------------------------------------- 
 */

 :root {
    --background: #DDE6EC;
    --foreground: #FFFFFF;
    --foreground-alternate: #eeeeee;
    --primary-text: #000000;
    --light-text: #4d4d4d;
    --accent-text: #FFFFFF;
    --primary-accent: #780a08;  
    --primary-border: #630000;
    --secondary-accent: #b83130;
    --error-red: #b60000;
    --in-progress: #8FC3D4;
    --complete: #7CC487;
    --discontinued: #717171;
    --expired: #ffa2a2;
    --standard-round: 15px;
    --standard-button-round: 10px;
}

[data-theme="dark"] {
    --primary-text: #ffffff;
    --background: #272727;
    --foreground: #363636;
    --foreground-alternate: #474747;
    --light-text: #c0c0c0;
    --accent-text: #FFFFFF;
    .popover, .popover-header {
        background-color: var(--foreground);
        color: var(--primary-text);
      }
      
    .modal-content {
        background-color: var(--foreground);
        color: var(--primary-text);
    }
    
    input[type="text"], input[type="date"], 
    input[type="number"], input[type="email"], input[type="password"], textarea, select {
        background-color: var(--foreground);
        color: var(--primary-text);
    }
    /* Change all text to use primary-text by default. 
    This will be overwritten by any other specific rules */
    * {
        color: var(--primary-text);
    }
}

/* 
-------------------------------------------------------------------
    --- Website defaults --- 
------------------------------------------------------------------- 
 */

body {
    background-color: var(--background);
}

ul.errorlist > li {
    color: red;
    font-weight: bold;
}

form {
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

/* 
-------------------------------------------------------------------
    --- Color Modifiers --- 
------------------------------------------------------------------- 
 */

.primary-accent {
    background-color: var(--primary-accent);
    color: var(--accent-text);
}

.primary-border {
    background-color: var(--primary-border);
}

.secondary-accent {
    background-color: var(--secondary-accent);
    color: var(--accent-text);
}

.background {
    background-color: var(--background);
}

.foreground {
    background-color: var(--foreground);
}

.accent-text {
    color: var(--accent-text);
}

.primary-text {
    color: var(--primary-text);
}

/* 
-------------------------------------------------------------------
    --- Modifiers --- 
------------------------------------------------------------------- 
 */

.round-corners {
    border-radius: var(--standard-round);
}

.table-caption-center {
    caption-side: top;
    text-align: center;
    color: var(--primary-text);
    font-weight: bold;
    font-size: 22px;
}

.table-layout-fixed {
    table-layout: fixed;
}

.accent-text-link {
    color: var(--accent-text);
    text-decoration: underline;
    transition: 0.3s ease-in-out;
}

.accent-text-link:hover {
    color: var(--accent-text);
    filter: brightness(60%);
}

/* 
-------------------------------------------------------------------
    --- Containers --- 
------------------------------------------------------------------- 
 */

.bulk-email-table-container {
    height: 60vh;
}

.datatable-container {
    overflow: auto;
    width: 100%;
    position: relative;
}

.small-box-container {
    max-width: 400px;
    padding: 10px;
    margin: auto;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.header-with-modal {
    display: flex;
    align-items: center;
    justify-content: center;
}

.primary-header-container,
.secondary-header-container {
    border-radius: var(--standard-round) var(--standard-round) 0 0;
    padding: 2px 4px;
    text-align: center !important;
}

.primary-header-container {
    background-color: var(--primary-accent);
    color: var(--accent-text);
}

.secondary-header-container {
    background-color: var(--secondary-accent);
    color: var(--accent-text);
}

/* 
-------------------------------------------------------------------
    --- Component Styling --- 
------------------------------------------------------------------- 
 */

.base-popover-button {
    text-decoration-line: underline !important;
    text-decoration-style: dotted !important;
}

.base-popover-button:hover {
    text-decoration: underline !important;
}

.pie-chart-and-legend-container {
    display: flex;
    justify-content: center;
}

.chart-legend-container {
    padding: 15px;
    margin-top: auto;
    margin-bottom: auto;
}

.chart-legend-item-container {
    font-size: 18px;
    display: flex;
    align-items: center;
}

.chart-legend-color {
    width: 20px;
    height: 20px;
    margin-right: 8px;
    border-radius: 4px;
}

.legend-color-in-progress {
    background-color: var(--in-progress);
    fill: var(--in-progress);
}

.legend-color-complete {
    background-color: var(--complete);
    fill: var(--complete);
}

.legend-color-discontinued {
    background-color: var(--discontinued);
    fill: var(--discontinued);
}

.legend-color-expired {
    background-color: var(--expired);
    fill: var(--expired);
}

.navbar-brand {
    color: var(--primary-text);
    border-radius: var(--standard-button-round);
    transition: 0.3s ease-in-out;
}

.navbar-brand:hover {
    color: var(--primary-text);
    background-color:var(--background);
}

.nav-link {
    color: var(--light-text);
    border-radius: var(--standard-button-round);
    transition: 0.3s ease-in-out;
 }

.nav-link:hover {
    color: var(--primary-text);
    background-color:var(--background);
}

.svg-container {
    display: inline-block;
    position: relative;
    width: 100%;
    padding-bottom: 100%;
    vertical-align: top;
    overflow: hidden;
}

.svg-content-responsive {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
}

.pie-chart {
    padding: 15px;
    width: min(50%, 400px, 1000px);
}

.button {
    background-color: var(--primary-accent);
    border: none;
    color: var(--accent-text);
    cursor: pointer;
    float: right;
    font-size: 16px;
    margin: 4px 2px;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
}

.close-x-button {
    font-size: 18px;
    border: 0px solid transparent;
    color: var(--light-text);
    background-color: var(--foreground);
    border-radius: var(--standard-round);
    transition: 0.3s ease-in-out;

}

.close-x-button:hover {
    color: var(--primary-text);
    filter: brightness(90%);

}

.show-password-button {
    margin-left: -30px;
    cursor: pointer;
}

.info-button {
    font-size: 24px;
    margin-left: 10px;
}

.mailto-icon {
    font-size: 20px;
}

.standard-modal-dialog {
    color: var(--primary-text) !important;
    font-size: 16px !important;
    font-weight: 400 !important;
    max-width: fit-content;
    margin-left: auto;
    margin-right: auto;
    padding-left: clamp(15px, 10%, 300px);
    padding-right: clamp(15px, 10%, 300px);
}

.theme-toggle-button {
    color: var(--primary-text);
    background-color: var(--background);
    border-color:grey;
    border-radius: 100%;
    transition: 0.3s ease-in-out;
}

.standard-button {
    background-color: var(--primary-accent);
    border: 2px solid var(--primary-border);
    border-radius: var(--standard-button-round);
    color: var(--accent-text);
}

.standard-button, .alternate-button {
    border-width: 2px;
    border-style: solid;
    border-radius: var(--standard-button-round);
    transition: 0.3s ease-in-out;
}
.standard-button:hover {
    color: var(--accent-text);
    border-color: black;
    filter: brightness(130%);
}

.alternate-button {
    color: var(--primary-text);
    background-color: var(--background);
    border-color: grey;
}

.alternate-button:hover, .theme-toggle-button:hover {
    color: var(--primary-text);
    border-color: var(--primary-text);
    filter: brightness(104%);
}

.title_header {
    background-color: var(--primary-accent);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    color: white;
}

.vertically-center-td td {
    vertical-align: middle;
}

.student-table-status-icon {
    border: 2px solid transparent;
    padding: .375rem .75rem;
    font-size: 18px;
    display: flex;
    align-items: center;
}

.error-text {
    color: var(--error-red);
    font-weight: bold;
}

.profile-table {
    background-color: var(--foreground);
    border-radius: var(--standard-round);
    margin-left: auto;
    margin-right: auto;
    width: auto;
}

/*
-------------------------------------------------------------------
    --- Social Media Buttons ---
-------------------------------------------------------------------
*/

.social-share-button {
    color: white;
    border-radius: var(--standard-button-round);
    display: inline-flex;
    justify-content: center;
    text-align: center;
    transition: 0.3s;
    font-size: 28px;
    width: 44px;
    height: 44px;
}

.social-share-button:hover {
    filter: brightness(140%);
    color: white;
}

.twitter-share-button {
    background-color: black;
}

.twitter-share-button:hover {
    background-color: #313131;
}

.linkedin-share-button {
    background-color: #0073B1;
}

.facebook-share-button {
    background-color: #0965FF;
}

/* 
-------------------------------------------------------------------
    --- Form Styling ---
------------------------------------------------------------------- 
 */

div.default-form input[type=submit] {
    background-color: var(--primary-accent);
    border-radius: 15px;
    color: var(--accent-text);
    max-width: 50%;
}

div.default-form label {
    display: block;
}
div.default-form textarea {
    width: 100%;
}

div.default-form select,
div.default-form input {
    border: 1px solid grey;
    border-radius: 4px;
    box-sizing: border-box;
    display: inline-block;
    width: 100%;
}

div.register-form input[type=submit] {
    background-color: var(--primary-accent);
    border-radius: 15px;
    color: var(--accent-text);
    max-width: 100%;
}

div.register-form label {
    display: block;
}

div.register-form select,
div.register-form input {
    border: 1px solid grey;
    border-radius: 4px;
    box-sizing: border-box;
    display: inline-block;
    width: 100%;
}

/* 
-------------------------------------------------------------------
    --- ID selector styling ---
------------------------------------------------------------------- 
 */

#courseJoinLink {
    font-weight: bold;
    font-size: larger;
    overflow-wrap: break-word;
}

